# RayTracing

./: CMakeLists.txt  Cylinder.cpp  Cylinder.h  CylinderInf.cpp  CylinderInf.h  Geometry.cpp  Geometry.h  Hexahedron.cpp  Hexahedron.h  IntersectResult.h  Plane.cpp  Plane.h  Polyhedron.cpp  Polyhedron.h  README.md  Ray.cpp  Ray.h  RecPlane.cpp  RecPlane.h  Sphere.cpp  Sphere.h  Union.cpp  Union.h  Util.cpp  Util.h  Vec.cpp  Vec.h  main.cpp
